# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

workspace(name = "pubsub-open-telemetery")

# Google Cloud Cpp
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "google_cloud_cpp",
    sha256 = "758e1eca8186b962516c0659b34ce1768ba1c9769cfd998c5bbffb084ad901ff",
    strip_prefix = "google-cloud-cpp-2.29.0",
    url = "https://github.com/googleapis/google-cloud-cpp/archive/v2.29.0.tar.gz",
)

load("@google_cloud_cpp//bazel:google_cloud_cpp_deps.bzl", "google_cloud_cpp_deps")

google_cloud_cpp_deps()

load("@com_google_googleapis//:repository_rules.bzl", "switched_rules_by_language")

switched_rules_by_language(
    name = "com_google_googleapis_imports",
    cc = True,
    grpc = True,
)

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")

grpc_deps()

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")

grpc_extra_deps()

# Boost
http_archive(
    name = "com_github_nelhage_rules_boost",
    sha256 = "9c72c5c5a2e78903dcbb4da0d969efc52d1422fab0d6e80d135b71e5189ded95",
    strip_prefix = "rules_boost-e9bd4c17c976fa4ee0f3889d497e1d333f1f95d5",
    url = "https://github.com/nelhage/rules_boost/archive/e9bd4c17c976fa4ee0f3889d497e1d333f1f95d5.tar.gz",
)

load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")

boost_deps()
